tests/paczka1/fuzzy1/19032476.err
Error in line 4: wvj9Enc S316 10,4
Error in line 7: wvj9Enc S528 24,9
Error in line 15: S189 S316 88,0
Error in line 17: S189 S189 35,0
Error in line 20: S189 S316 23,4
Error in line 27: msx2Run S87 371,2
Error in line 28: msx2Run S528 64,7
